[package]
name = "amect"
description = "Central AME toolkit GUI"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["amect-cli", "libamect-common"]

[workspace.dependencies]
anyhow = "1.0"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.29", features = ["derive"] }
eframe = "0.20"
image = "0.24.5"
inquire = "0.6"
native-dialog = { version = "0.6.3", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
dirs = "5.0"
libamect-common = { path = "libamect-common" }
