[package]
name = "amect"
description = "Central AME toolkit GUI"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["amect-cli", "libamect-common"]

[workspace.dependencies]
anyhow = "1.0"
native-dialog = { version = "0.6.3", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }

[dependencies]
anyhow = { workspace = true }
dirs = "5.0"
eframe = "0.20"
image = "0.24.5"
libamect-common = { path = "libamect-common" }
native-dialog = { workspace = true }

[profile.release]
strip = true
opt-level = "s"
lto = true
