[package]
name = "libamect-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dirs = "5.0"
image = "0.24"
native-dialog = { workspace = true }

[target.'cfg(windows)'.dependencies]
widestring = "1.0"
winreg = "0.11.0"
windows = { version = "0.46", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System",
    "Win32_System_WindowsProgramming",
    "Win32_NetworkManagement_NetManagement",
] }
